--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
-
 {
   "name": "relayer_contract",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.3.1",
+    "@openzeppelin/test-helpers": "^0.5.13",
+    "@types/big.js": "^6.1.2",
+    "@types/json-bigint": "^1.0.1",
+    "@types/node": "^16.9.1",
+    "@types/yargs": "^17.0.2",
+    "async-sema": "^3.1.1",
+    "big.js": "^6.1.1",
     "chai": "^4.3.4",
-    "ethers": "^5.4.1",
+    "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
+    "ethereumjs-util": "^7.1.0",
+    "ethers": "^5.4.1",
+    "ethers-multicall": "^0.2.1",
+    "extra-bigint": "^0.0.62",
     "hardhat": "^2.4.3",
+    "hardhat-deploy": "^0.9.1",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10",
+    "json-bigint": "^1.0.0",
+    "log4js": "^6.3.0",
+    "minimist": "^1.2.5",
+    "node": "^16.9.1",
+    "pubsub-js": "^1.9.3",
+    "sleep-promise": "^9.1.0",
+    "yargs": "^17.1.1",
     "zeppelin-solidity": "^1.12.0"
   },
   "devDependencies": {},
