--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "yargs": "^17.1.1",
     "zeppelin-solidity": "^1.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2"
+  },
   "scripts": {
     "test": "mocha"
   },
