--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.1",
+    "@openzeppelin/contracts-upgradeable": "^4.4.1",
     "@openzeppelin/test-helpers": "^0.5.13",
     "@types/big.js": "^6.1.2",
     "@types/json-bigint": "^1.0.1",
