--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.7",
+    "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.1",
@@ -23,8 +25,11 @@
     "ethers-multicall": "^0.2.1",
     "extra-bigint": "^0.0.62",
     "hardhat": "^2.4.3",
-    "hardhat-deploy": "^0.9.1",
+    "hardhat-abi-exporter": "^2.4.0",
+    "hardhat-deploy": "^0.9.14",
     "hardhat-deploy-ethers": "^0.3.0-beta.10",
+    "hardhat-gas-reporter": "^1.0.6",
+    "hardhat-spdx-license-identifier": "^2.0.3",
     "json-bigint": "^1.0.0",
     "log4js": "^6.3.0",
     "minimist": "^1.2.5",
