--- a/package.json
+++ b/package.json
@@ -1,51 +1,58 @@
 {
-  "name": "relayer_contract",
+  "name": "Athena-contract",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "map:deploy:bridgerelay": "npx hardhat deploy --tags MAPBridgeRelayV1 --network Map",
+    "eth:deploy:bridge": "npx hardhat deploy --tags SwapMiningDefaultList --network bsctest",
+    "map:deploy:addmanager": "npx hardhat deploy --tags AddManager --network Map"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZDefi/Athena-contract.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ZDefi/Athena-contract/issues"
+  },
+  "homepage": "https://github.com/ZDefi/Athena-contract#readme",
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.7",
-    "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.3.1",
-    "@openzeppelin/contracts-upgradeable": "^4.4.1",
-    "@openzeppelin/test-helpers": "^0.5.13",
-    "@types/big.js": "^6.1.2",
-    "@types/json-bigint": "^1.0.1",
-    "@types/node": "^16.9.1",
-    "@types/yargs": "^17.0.2",
-    "async-sema": "^3.1.1",
-    "big.js": "^6.1.1",
-    "chai": "^4.3.4",
-    "dotenv": "^10.0.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethereumjs-util": "^7.1.0",
-    "ethers": "^5.4.1",
-    "ethers-multicall": "^0.2.1",
-    "extra-bigint": "^0.0.62",
-    "hardhat": "^2.4.3",
-    "hardhat-abi-exporter": "^2.4.0",
-    "hardhat-deploy": "^0.9.14",
-    "hardhat-deploy-ethers": "^0.3.0-beta.10",
-    "hardhat-gas-reporter": "^1.0.6",
-    "hardhat-spdx-license-identifier": "^2.0.3",
-    "json-bigint": "^1.0.0",
-    "log4js": "^6.3.0",
-    "minimist": "^1.2.5",
-    "node": "^16.9.1",
-    "pubsub-js": "^1.9.3",
-    "sleep-promise": "^9.1.0",
-    "yargs": "^17.1.1",
-    "zeppelin-solidity": "^1.12.0"
+    "bignumber.js": "^9.0.1",
+    "keythereum": "^1.2.0",
+    "prompt-sync": "^4.2.0",
+    "read": "^1.0.7",
+    "secp256k1": "^4.0.2",
+    "stdio": "^2.1.1"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.7",
+    "@nomiclabs/hardhat-solhint": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.3.1",
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
+    "@uniswap/v2-core": "^1.0.1",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "concurrently": "^6.0.0",
+    "ding-robot": "^1.0.0",
+    "dotenv": "^8.2.0",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.5.2",
+    "hardhat": "^2.1.0",
+    "hardhat-abi-exporter": "^2.2.1",
+    "hardhat-deploy": "^0.7.2",
+    "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-spdx-license-identifier": "^2.0.3",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2",
+    "web3": "^1.3.4"
+  }
 }
