--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "bscmain:grant:bridge": "npx hardhat deploy --tags TestTokenGrant --network Bsc",
     "matic:deploy:token": "npx hardhat deploy --tags TokenMatic --network Matic",
     "matic:deploy:bridge": "npx hardhat deploy --tags MAPBridgeV1 --network Matic",
-    "matic:grant:bridge": "npx hardhat deploy --tags TokenGrantMatic --network Matic",
-    "eth:upgrade:bridge": "npx hardhat deploy --tags BridgeUpgrade --network Eth"
+    "matic:grantToken:bridge": "npx hardhat deploy --tags TokenGrantMatic --network Matic",
+    "eth:upgrade:bridge": "npx hardhat deploy --tags BridgeUpgrade --network Eth",
+    "matic:grant:bridge":"npx hardhat deploy --tags BridgeAddManager --network Matic",
   },
   "repository": {
     "type": "git",
