--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "matic:deploy:bridge": "npx hardhat deploy --tags MAPBridgeV1 --network Matic",
     "matic:grantToken:bridge": "npx hardhat deploy --tags TokenGrantMatic --network Matic",
     "eth:upgrade:bridge": "npx hardhat deploy --tags BridgeUpgrade --network Eth",
-    "matic:grant:bridge":"npx hardhat deploy --tags BridgeAddManager --network Matic",
+    "matic:grant:bridge": "npx hardhat deploy --tags BridgeAddManager --network Matic",
     "matic:deploy:relayer": "npx hardhat deploy --tags Relayer --network Matic"
   },
   "repository": {
@@ -37,6 +37,7 @@
     "prompt-sync": "^4.2.0",
     "read": "^1.0.7",
     "secp256k1": "^4.0.2",
+    "source-map": "^0.7.3",
     "stdio": "^2.1.1"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "hardhat-spdx-license-identifier": "^2.0.3",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
+    "solidity-coverage": "^0.7.20",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2",
     "web3": "^1.3.4"
